# Fast-API-Blog-backend

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 6352dcf47494_adds_blogs_model_to_db.py  9112ea95fdaf_adds_is_deleted_field_to_blogs_db.py  dad25ad4374c_initial_revision.py
db/: __init__.py  session.py
db/models/: Blog.py  User.py
db/repository/: blog.py  user.py
routes/: __init__.py
routes/v1/: blog.py  login.py  user.py
schemas/: blog.py  user.py
utils/: config.py  security.py
